# nanokv

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_errors.txt  pager_bench_results.txt
.beads/: dolt-server (IT15's conflicted copy 2026-05-12).activity  export-state.json  interactions.jsonl  issues.jsonl  last-touched (IT15's conflicted copy 2026-05-13)  metadata.json
benches/: bloom_filter_benchmarks.rs  cache_benchmarks.rs  compression_encryption_benchmarks.rs  pager_benchmarks.rs  rtree_benchmarks.rs  streaming_benchmarks.rs  timeseries_benchmarks.rs  vfs_benchmarks.rs  wal_benchmarks.rs
docs/: ARCHITECTURE.md  BLOB_TO_STREAMING_MIGRATION.md  BLOOM_FILTER_TRANSACTION_INTEGRATION.md  BTREE_SPLIT_MERGE_IMPLEMENTATION.md  CODE_REVIEW_ISSUES_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPOSITE_INDEX_DESIGN.md  COMPRESSION_ENCRYPTION.md  COMPRESSION_ENCRYPTION_BENCHMARKS_ENABLED.md  COMPRESSION_ENCRYPTION_SUMMARY.md  EMBEDDED_KV_TRAITS_EVALUATION.md  ERROR_CONTEXT_IMPROVEMENTS.md  FILE_FORMAT.md  IMPLEMENTATION_PLAN.md  ISOLATION_LEVELS.md  ISSUE_REVIEW_ANALYSIS.md  LOCK_FREE_FREELIST_IMPLEMENTATION.md  LSM_MANIFEST_RECOVERY.md  LSM_MEMTABLE_FLUSH.md  LSM_STREAMING_IMPLEMENTATION.md  METRICS_AND_OBSERVABILITY.md  MVCC_TEST_COVERAGE_ANALYSIS.md  MVCC_VERSION_CHAIN_INTEGRATION.md  NOTES.md  PAGER_CONCURRENCY_COMPLETE.md  PAGER_CONCURRENCY_IMPROVEMENT.md  PAGER_CONCURRENCY_PROGRESS.md  PAGER_LOCK_ORDERING.md  PAGE_PINNING_FIX.md  PHASE1_COMPLETION_SUMMARY.md  PHASE4_DATABASE_API.md  PHASE4_ERROR_HANDLING_IMPROVEMENTS.md  RTREE_GEOSPATIAL_IMPLEMENTATION.md  SHARDED_CACHE_IMPLEMENTATION.md  SPECIALTY_TABLE_MVCC_INTEGRATION_PLAN.md  SPECIALTY_TABLE_TRANSACTIONS.md  STREAMING_API_IMPLEMENTATION.md  TABLE_INDEX_ARCHITECTURE.md  TABLE_INDEX_ISSUES.md  TRANSACTION_LAYER_IMPROVEMENTS.md  (+8 more)
docs/adrs/: 001-single-file-database.md  003-mvcc-concurrency.md  004-multiple-storage-engines.md  006-sharded-concurrency.md  007-unified-object-id.md  011-indexes-as-specialty-tables.md  012-unified-table-architecture.md  README.md
docs/archive/: CACHE_IMPLEMENTATION.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW_UPDATE.md  COMPRESSION_ENCRYPTION.md  COMPRESSION_ENCRYPTION_SUMMARY.md  CRITICAL_INSIGHTS.md  DESIGN_DECISIONS.md  KEY_FINDINGS.md  NEXT_STEPS.md  PAGER_COMPRESSION_ENCRYPTION_BENCHMARKS.md  PAGER_RACE_CONDITION_FIX.md  PAGER_STRESS_TEST_RESULTS.md  PROBLEM_STATEMENT.md  RISK_ASSESSMENT.md  TABLE_INDEX_IMPLEMENTATION_DESIGN.md  (+5 more)
src/: bin.rs  blob.rs  cache.rs  embedded_kv_traits.rs  error.rs  error_observability.rs  index.rs  kvdb.rs  lib.rs  pager.rs  rest.rs  snap.rs  table.rs  table_registry.rs  txn.rs  types.rs  vfs.rs  wal.rs
tests/: blob_store_tests.rs  bloom_filter_tests.rs  bloom_transaction_tests.rs  btree_split_merge_tests.rs  btree_streaming_tests.rs  cache_integration_tests.rs  compression_encryption_integration_tests.rs  conflict_detector_tests.rs  corruption_recovery_tests.rs  database_api_tests.rs  dense_ordered_tests.rs  end_to_end_integration_test.rs  error_handling_tests.rs  fulltext_transaction_tests.rs  graph_mvcc_tests.rs  graph_table_tests.rs  graph_transaction_tests.rs  hash_table_tests.rs  hnsw_mvcc_tests.rs  hnsw_vector_tests.rs  isolation_level_tests.rs  lsm_streaming_tests.rs  lsm_tree_integration_tests.rs  mvcc_comprehensive_tests.rs  overflow_chain_tests.rs  paged_btree_comprehensive_tests.rs  pager_concurrency_tests.rs  pager_pin_tests.rs  pager_stress_tests.rs  rtree_geospatial_tests.rs  rtree_mvcc_tests.rs  snapshot_visibility_tests.rs  streaming_integration_tests.rs  table_index_tests.rs  timeseries_comprehensive_tests.rs  timeseries_mvcc_tests.rs  timeseries_persistence_tests.rs  timeseries_transaction_tests.rs  transaction_index_tests.rs  transaction_integration_tests.rs  (+11 more)
(+86 files in other folders)
